--- a/src/prescriptions/prescriptions.scss
+++ b/src/prescriptions/prescriptions.scss
@@ -47,6 +47,7 @@ title {
 
 .tabsContainer {
   background-color: $ui-02;
+  padding: 0 spacing.$spacing-05;
 
   :global(.cds--tabs__nav-item--selected) {
     box-shadow: inset 0 2px 0 0 var(--brand-03) !important;
